pool creation completed

--- a/Launchbase/appsettings.json
+++ b/Launchbase/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ContractAddress": {
-    "Address": "0xf7c5e27996d96203E26007aE3825D5Ef6f6f29d4",
+    "Address": "0xc5d1B545de19Ca1c97958AbfD7A0BaaF02B9A3c6",
     "DeployedChain": "Polygon Mainnet",
     "ActiveChainId": 137,
-    "ChainLogoUrl": "https://polygonscan.com/assets/poly/images/svg/logos/chain-light.svg"
+    "ChainLogoUrl": "https://chainlist.wtf/static/1ee4a1ab4dd95100e8d21e67acf53849/61ca6/polygon.webp"
   },
   "Currencies": {
 
@@ -21,6 +21,7 @@
       "ChainName": "Polygon Mainnet",
       "Name": "Matic Token",
       "Symbol": "MATIC",
+      "IsToken": false,
       "LogoUrl": "https://polygonscan.com/token/images/polygonmatic_new_32.png"
     },
     "1": {
@@ -30,6 +31,7 @@
       "ChainName": "Polygon Mainnet",
       "Name": "Tether USD",
       "Symbol": "USDT",
+      "IsToken": false,
       "LogoUrl": "https://etherscan.io/token/images/tethernew_32.png"
     },
     "2": {
@@ -39,6 +41,7 @@
       "ChainName": "Polygon Mainnet",
       "Name": "BNB",
       "Symbol": "BNB",
+      "IsToken": false,
       "LogoUrl": "https://polygonscan.com/token/images/bnb_28_2.png"
     }
 
