code cleanup has been made

--- a/Launchbase/appsettings.json
+++ b/Launchbase/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ContractAddress": {
-    "Address": "0x93a8Eb216159909834Dc467AF8A4b3CD4F272E6d",
+    "Address": "0x0b1ee60A15fb75D04F872cdE1750f45BB826cE72",
     "DeployedChain": "Polygon Mainnet",
     "ActiveChainId": 137,
     "ChainLogoUrl": "https://chainlist.wtf/static/1ee4a1ab4dd95100e8d21e67acf53849/61ca6/polygon.webp"
@@ -31,7 +31,7 @@
       "ChainName": "Polygon Mainnet",
       "Name": "Tether USD",
       "Symbol": "USDT",
-      "IsToken": false,
+      "IsToken": true,
       "LogoUrl": "https://etherscan.io/token/images/tethernew_32.png"
     },
     "2": {
@@ -41,7 +41,7 @@
       "ChainName": "Polygon Mainnet",
       "Name": "BNB",
       "Symbol": "BNB",
-      "IsToken": false,
+      "IsToken": true,
       "LogoUrl": "https://polygonscan.com/token/images/bnb_28_2.png"
     }
 
