UI responsivenenss modified

--- a/Launchbase/appsettings.json
+++ b/Launchbase/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  //"Urls": "https://127.0.0.1:5005",
   "ContractAddress": {
     "Address": "0x0b1ee60A15fb75D04F872cdE1750f45BB826cE72",
     "DeployedChain": "Polygon Mainnet",
