multi-chain functionality applied

--- a/Launchbase/appsettings.json
+++ b/Launchbase/appsettings.json
@@ -8,43 +8,115 @@
   "AllowedHosts": "*",
   //"Urls": "https://127.0.0.1:5005",
   "ContractAddress": {
-    "Address": "0x0b1ee60A15fb75D04F872cdE1750f45BB826cE72",
-    "DeployedChain": "Polygon Mainnet",
-    "ActiveChainId": 137,
-    "ChainLogoUrl": "https://chainlist.wtf/static/1ee4a1ab4dd95100e8d21e67acf53849/61ca6/polygon.webp"
-  },
-  "Currencies": {
+    "137": {
+      "Address": "0x0b1ee60A15fb75D04F872cdE1750f45BB826cE72",
+      "DeployedChain": "Polygon Mainnet",
+      "ActiveChainId": 137,
+      "ChainLogoUrl": "https://chainlist.wtf/static/1ee4a1ab4dd95100e8d21e67acf53849/61ca6/polygon.webp",
+      "CurrecySymbol": "MATIC",
+      "Currencies": {
+        "0": {
+          "IsPrimary": true,
+          "Address": "0x0000000000000000000000000000000000001010",
+          "ChainId": "137",
+          "ChainName": "Polygon Mainnet",
+          "Name": "Matic Token",
+          "Symbol": "MATIC",
+          "IsToken": false,
+          "LogoUrl": "https://polygonscan.com/token/images/polygonmatic_new_32.png"
+        },
+        "1": {
+          "IsPrimary": false,
+          "Address": "0xc2132D05D31c914a87C6611C10748AEb04B58e8F",
+          "ChainId": "137",
+          "ChainName": "Polygon Mainnet",
+          "Name": "Tether USD",
+          "Symbol": "USDT",
+          "IsToken": true,
+          "LogoUrl": "https://etherscan.io/token/images/tethernew_32.png"
+        },
+        "2": {
+          "IsPrimary": false,
+          "Address": "0x3BA4c387f786bFEE076A58914F5Bd38d668B42c3",
+          "ChainId": "137",
+          "ChainName": "Polygon Mainnet",
+          "Name": "BNB",
+          "Symbol": "BNB",
+          "IsToken": true,
+          "LogoUrl": "https://polygonscan.com/token/images/bnb_28_2.png"
+        }
 
-    "0": {
-      "IsPrimary": true,
-      "Address": "0x0000000000000000000000000000000000001010",
-      "ChainId": "137",
-      "ChainName": "Polygon Mainnet",
-      "Name": "Matic Token",
-      "Symbol": "MATIC",
-      "IsToken": false,
-      "LogoUrl": "https://polygonscan.com/token/images/polygonmatic_new_32.png"
+      }
     },
     "1": {
-      "IsPrimary": false,
-      "Address": "0xc2132D05D31c914a87C6611C10748AEb04B58e8F",
-      "ChainId": "137",
-      "ChainName": "Polygon Mainnet",
-      "Name": "Tether USD",
-      "Symbol": "USDT",
-      "IsToken": true,
-      "LogoUrl": "https://etherscan.io/token/images/tethernew_32.png"
-    },
-    "2": {
-      "IsPrimary": false,
-      "Address": "0x3BA4c387f786bFEE076A58914F5Bd38d668B42c3",
-      "ChainId": "137",
-      "ChainName": "Polygon Mainnet",
-      "Name": "BNB",
-      "Symbol": "BNB",
-      "IsToken": true,
-      "LogoUrl": "https://polygonscan.com/token/images/bnb_28_2.png"
-    }
+      "Address": "0x0b1ee60A15fb75D04F872cdE1750f45BB826cE72",
+      "DeployedChain": "Ethereum Mainnet",
+      "ActiveChainId": 1,
+      "ChainLogoUrl": "https://bscscan.com/token/images/ethereum_32.png",
+      "CurrecySymbol": "ETH",
+      "Currencies": {
+        "0": {
+          "IsPrimary": true,
+          "Address": "0x0000000000000000000000000000000000001010",
+          "ChainId": "1",
+          "ChainName": "Ethereum Mainnet",
+          "Name": "Ethereum Token",
+          "Symbol": "ETH",
+          "IsToken": false,
+          "LogoUrl": "https://bscscan.com/token/images/ethereum_32.png"
+        },
+        "1": {
+          "IsPrimary": false,
+          "Address": "0xdAC17F958D2ee523a2206206994597C13D831ec7",
+          "ChainId": "1",
+          "ChainName": "Ethereum Mainnet",
+          "Name": "Tether USD",
+          "Symbol": "USDT",
+          "IsToken": true,
+          "LogoUrl": "https://etherscan.io/token/images/tethernew_32.png"
+        },
+        "2": {
+          "IsPrimary": false,
+          "Address": "0xB8c77482e45F1F44dE1745F52C74426C631bDD52",
+          "ChainId": "1",
+          "ChainName": "Ethereum Mainnet",
+          "Name": "BNB",
+          "Symbol": "BNB",
+          "IsToken": true,
+          "LogoUrl": "https://polygonscan.com/token/images/bnb_28_2.png"
+        }
 
+      }
+    },
+    "56": {
+      "Address": "0x0b1ee60A15fb75D04F872cdE1750f45BB826cE72",
+      "DeployedChain": "BNB Smart Chain Mainnet",
+      "ActiveChainId": 56,
+      "ChainLogoUrl": "https://bscscan.com/assets/bsc/images/svg/logos/token-light.svg",
+      "CurrecySymbol": "BNB",
+      "Currencies": {
+        "0": {
+          "IsPrimary": true,
+          "Address": "0x0000000000000000000000000000000000001010",
+          "ChainId": "56",
+          "ChainName": "BNB Mainnet",
+          "Name": "Ethereum Token",
+          "Symbol": "BNB",
+          "IsToken": false,
+          "LogoUrl": "https://bscscan.com/assets/bsc/images/svg/logos/token-light.svg"
+        },
+        "1": {
+          "IsPrimary": false,
+          "Address": "0xdAC17F958D2ee523a2206206994597C13D831ec7",
+          "ChainId": "56",
+          "ChainName": "Ethereum Mainnet",
+          "Name": "Tether USD",
+          "Symbol": "USDT",
+          "IsToken": true,
+          "LogoUrl": "https://etherscan.io/token/images/tethernew_32.png"
+        }
+
+      }
+    }
   }
 }
